<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StandSelectionFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolBarInSelection"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardElevation="10dp">
        <TextView
            android:id="@+id/stand_selection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/select_your_stand"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneSignUp"
        android:layout_below="@+id/toolBarInSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/phone_number"
        app:hintTextColor="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditTextSignUp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/phoneSignUp"
        android:id="@+id/textLayoutInStandSelection"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="dropdown_menu"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/districtCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_below="@+id/textLayoutInStandSelection"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/selection_loader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            style="@style/AVLoadingIndicatorView"
            app:indicatorName="LineSpinFadeLoaderIndicator"
            app:indicatorColor="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/standRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/noDataDisplayLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/warning"/>

            <TextView
                android:id="@+id/waringText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/warning_text"/>

            <Button
                android:id="@+id/warningButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/contact_us"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>