<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    tools:context=".MapActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapboxMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        mapbox:mapbox_styleUrl="@string/MAP_STREET_STYLE"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/call_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="fab_navigate"
            android:text="@string/call_now"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            app:icon="@drawable/icon_phone"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/navigate_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="fab_navigate"
            android:text="@string/start_navigation"
            app:icon="@drawable/icon_stand_loc"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:alpha="0.2"/>

        <TextView
            android:id="@+id/navigation_CustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/navigation_CustomerLocationFrom"
            android:layout_below="@id/navigation_CustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/navigation_CustomerLocationTo"
            android:layout_below="@+id/navigation_CustomerLocationFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/navigation_CustomerAmount"
            android:layout_below="@id/navigation_CustomerLocationTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"/>


    </RelativeLayout>

</RelativeLayout>