<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NavigationFragment">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progressInNav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        style="@style/AVLoadingIndicatorView"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        app:indicatorColor="@color/colorPrimary" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="10dp">
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/aye_auto"/>
        <ImageView
            android:id="@+id/reloadData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="end|center"
            android:src="@drawable/reload"/>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:id="@+id/hirelayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorSupporting">
        <TextView
            android:id="@+id/hiring_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/hiring_mode"
            android:layout_marginStart="10dp"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/hireSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>

    <com.skyfishjy.library.RippleBackground
        android:id="@+id/search_layer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:rb_color="@color/colorPrimary"
        android:layout_centerInParent="true"
        app:rb_radius="27dp"
        app:rb_rippleAmount="4"
        app:rb_duration="3000"
        app:rb_scale="6">
        <ImageView
            android:id="@+id/moving_search_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:src="@drawable/autologo"/>

        <TextView
            android:id="@+id/searching_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/searching_customer"/>

    </com.skyfishjy.library.RippleBackground>

    <RelativeLayout
        android:id="@+id/new_customer_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/new_cus_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_cutomer"/>

            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/customerLocation1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textStyle="bold"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/customerLocation2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:fadingEdge="horizontal"
                android:textStyle="bold"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/customerAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorGreen"
                android:textSize="18sp"/>

            <LinearLayout
                android:id="@+id/aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/cancel"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/accept_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/contact"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            </LinearLayout>

            <Button
                android:id="@+id/trip_ends_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:paddingLeft="20dp"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="7dp"
                android:paddingBottom="10dp"
                android:text="@string/trip_ends"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="from"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/grey"
            android:text="LOGCAT DEVELOPERS"/>
    </LinearLayout>

</RelativeLayout>